--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Brop</title>
-    </head>
-    <body>
-        <script type="text/javascript" src="build/bundle.js"></script>
-    </body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Brop</title>
+  <link rel="shortcut icon" href="favicon.ico"></head>
+  <body>
+  <script type="text/javascript" src="bundle.js"></script></body>
 </html>
